# pymoriam

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: Caddyfile  Dockerfile  authentication-and-authorization.md  conf.py  configuration.md  database-schemas.md  domain-schemas.md  environment-variables.md  index.rst  indexing-configuration.md  introduction.md  logging-configuration.md  quickstart.md  search-configuration.md  service-configuration.md
docs/_static/: style.css
memoriam/: __init__.py  __main__.py  arangodb.py  authly.py  cli.py  compress.py  config.py  constants.py  logs.py  openapi.py  proxy.py  utils.py
memoriam/data/: authly_operations.yml  (+16 more)
onto/: SchemaGuide.md
tests/: Dockerfile.test-service  conftest.py  docker-compose.cluster.yml  docker-compose.yml  run_test_service.py  test_integration_access_control.py  test_integration_audit.py  test_integration_auth.py  test_integration_domain.py  test_integration_graphql.py  test_integration_minio.py  test_integration_performance.py  test_integration_rest.py  test_integration_search.py  test_integration_services.py  test_integration_zhealth.py  test_unit_arangodb.py  test_unit_arangodb_proxy.py  test_unit_audit.py  test_unit_auth.py  test_unit_cli.py  test_unit_domain.py  test_unit_graphql.py  test_unit_logs.py  test_unit_openapi.py  test_unit_rest.py  test_unit_search.py  test_unit_services.py  test_unit_triggers.py  test_unit_utils.py  test_unit_validation_schemas.py
(+45 files in other folders)
